--- a/regtests/makefile
+++ b/regtests/makefile
@@ -50,7 +50,7 @@ RT_STD = turl tgetparam param dummy simple tclientto shutdown strm strm2 \
 	head hval turl4 ctab sock1 file redirect hostip upload2 upload3 \
 	tlog unexph2 sp sessions dirop multiple tcom tmime sessions2 \
 	sessions3 huge_response server_info server_config sback append \
-	compress $(RT_STD_SEC)
+	compress zapp zbig $(RT_STD_SEC)
 
 ifeq ($(XMLADA),)
 STD_TESTS   = $(RT_STD)
