(DEMOS): Add zdemo.

--- a/demos/makefile
+++ b/demos/makefile
@@ -34,7 +34,7 @@ endif
 endif
 
 DEMOS = runme agent auth ws wps com_1 com_2 main hotplug hello_world \
-	text_input vh_demo dispatch res_demo 
+	text_input vh_demo dispatch res_demo zdemo
 
 BUILD_SPECIFIC = build_res
 
