Add GNAT_VERSION, set to 3.15 by default.

--- a/makefile.conf
+++ b/makefile.conf
@@ -5,6 +5,15 @@
 # variables here and should not have do change the main makefile.
 
 ##############################################################################
+# GNAT Version used to build AWS. Note that this is only to select the right
+# compiler options as some were not present on 3.15 but are on 3.16. By
+# setting this to 3.15 by default only a set of checks is not done but this
+# will not in any way removes some AWS features. Developpers MUST properly set
+# this to have full style checks on before doing a check-in.
+#
+GNAT_VERSION = 3.15
+
+##############################################################################
 # Adasockets, optional. AWS use GNAT.Sockets as the default socket package. If
 # you want to use AdaSockets just uncomment the ADASOCKETS variable below and
 # set it to point to the AdaSockets install directory.
