(ASIS): New variable.

--- a/makefile.conf
+++ b/makefile.conf
@@ -28,6 +28,12 @@ GNAT_VERSION = 3.15
 #XMLADA	 = /usr/Ada.Libraries/xmlada
 
 ##############################################################################
+# ASIS optional, needed if you want to build ada2wsdl tool. This tool can be
+# used to create a WSDL document from an Ada spec.
+#
+#ASIS	 = /opt/GNATPRO/3.16a1/lib/asis
+
+##############################################################################
 # AWS support SSL (Secure Socket Layer). The SSL support is always built-in
 # AWS. To build AWS's demos will SSL support you need to set MODE to ssl, in
 # this case you must have installed OpenSSL on you computer. OpenSSL libraries
