(TOOLS): Add ada2wsdl-main if ASIS installed. ($(TOOLS)): Remove -main suffix if present.

--- a/tools/makefile
+++ b/tools/makefile
@@ -11,6 +11,10 @@ ifdef XMLADA
 TOOLS := $(TOOLS) wsdl2aws
 endif
 
+ifdef ASIS
+TOOLS := $(TOOLS) ada2wsdl-main
+endif
+
 ALL_EXEC = $(addsuffix $(EXEEXT), $(TOOLS))
 
 build: $(TOOLS)
@@ -18,8 +22,9 @@ build: $(TOOLS)
 force:
 
 $(TOOLS): force
-	echo Building $@ tools
-	$(GNATMAKE) $(GARGS) $@ -largs -s -L../lib $(LIBS) -lz
+	echo Building `basename $@ -main` tools
+	$(GNATMAKE) $(GARGS) $@ -o `basename $@ -main` \
+		-largs -s -L../lib $(LIBS) -lz
 
 clean:
 	-$(RM) -f *.o *.ali $(ALL_EXEC) b~*.ad[sb]
