--- a/regtests/.cvsignore
+++ b/regtests/.cvsignore
@@ -145,6 +145,8 @@ b~upload3.adb
 b~upload3.ads
 b~workorder.adb
 b~workorder.ads
+b~wsdl_1_main.adb
+b~wsdl_1_main.ads
 b~zapp.adb
 b~zapp.ads
 b~zbig.adb
