--- a/regtests/.cvsignore
+++ b/regtests/.cvsignore
@@ -147,6 +147,8 @@ b~workorder.adb
 b~workorder.ads
 b~wsdl_1_main.adb
 b~wsdl_1_main.ads
+b~wsdl_2_main.adb
+b~wsdl_2_main.ads
 b~zapp.adb
 b~zapp.ads
 b~zbig.adb
@@ -317,6 +319,24 @@ upload3.res
 upload3.tmp
 workorder.res
 workorder.tmp
+wsdl_1.res
+wsdl_1.wsdl
+wsdl_1_service-client.adb
+wsdl_1_service-client.ads
+wsdl_1_service-server.adb
+wsdl_1_service-server.ads
+wsdl_1_service-types.adb
+wsdl_1_service-types.ads
+wsdl_1_service.ads
+wsdl_2.res
+wsdl_2.wsdl
+wsdl_2_service-client.adb
+wsdl_2_service-client.ads
+wsdl_2_service-server.adb
+wsdl_2_service-server.ads
+wsdl_2_service-types.adb
+wsdl_2_service-types.ads
+wsdl_2_service.ads
 zapp.res
 zbig.res
 zfile.res
