(RT_SOAP_ASIS): Add comment about naming scheme. ($(ASIS_TESTS)): Compute port using test filename.

--- a/regtests/makefile
+++ b/regtests/makefile
@@ -41,6 +41,8 @@ RT_SOAP = soap1 soap2 soap3 soap4 workorder testxml test_speed test_soap \
 	test_soap2 test_soap3 test_soap4 test_soap5 disp_soap $(RT_SOAP_SEC)
 
 # SOAP/WSDL test using ada2wsdl (ASIS package required)
+# Names must start with wsdl_ and be followed by a single digit between 0
+# and 9. Socket port is then 770<digit>.
 RT_SOAP_ASIS = wsdl_1 wsdl_2
 
 # Standard regression tests
@@ -129,7 +131,8 @@ endif
 
 $(ASIS_TESTS): force
 	echo -n Building $@
-	../tools/ada2wsdl -q -f -a http://localhost:3333 $@.ads -o $@.wsdl
+	../tools/ada2wsdl -q -f \
+		-a http://localhost:770`echo $@ | cut -c 6-` $@.ads -o $@.wsdl
 	../tools/wsdl2aws -q -f -types $@ $@.wsdl
 	gnatmake -g $@_main $(GARGS) -largs $(LARGS) -bargs -E
 	echo ",  run it"
