--- a/demos/.cvsignore
+++ b/demos/.cvsignore
@@ -1,3 +1,5 @@
+agent
+auth
 b~agent.adb
 b~agent.ads
 b~auth.adb
@@ -46,6 +48,9 @@ b~wsdl_demo_client.adb
 b~wsdl_demo_client.ads
 b~wsdl_demo_server.adb
 b~wsdl_demo_server.ads
+com_1
+com_2
+dispatch
 hello_demo-client.adb
 hello_demo-client.ads
 hello_demo-server.adb
@@ -53,12 +58,32 @@ hello_demo-server.ads
 hello_demo-types.adb
 hello_demo-types.ads
 hello_demo.ads
+hello_world
+hotplug
 interoplab-client.adb
 interoplab-client.ads
 interoplab-types.adb
 interoplab-types.ads
 interoplab.ads
+interoplab_main
+main
 rdemo-adains_png.ads
 rdemo-page3_html.ads
 rdemo.adb
 rdemo.ads
+res_demo
+runme
+soap_client
+soap_cvs
+soap_server
+soap_server_disp
+soap_svs
+test_jabber
+test_ldap
+text_input
+vh_demo
+wps
+ws
+wsdl_demo_client
+wsdl_demo_server
+zdemo
