--- a/regtests/.cvsignore
+++ b/regtests/.cvsignore
@@ -1,7 +1,10 @@
 alldifs
+append
 append.res
+auth
 auth.res
 auth.tmp
+auth2
 auth2.res
 b~append.adb
 b~append.ads
@@ -157,20 +160,30 @@ b~zfile.adb
 b~zfile.ads
 b~zstrm.adb
 b~zstrm.ads
+check_mem
 check_mem.res
 check_mem.run1
 check_mem.run2
+compress
 compress.res
+ctab
 ctab.res
 ctab.tmp
+dirop
 dirop.res
 dirop.tmp
+disp_soap
 disp_soap.res
+dispatch
 dispatch.res
+dispatch_method
 dispatch_method.res
+dispatch_vh
 dispatch_vh.res
+dummy
 dummy.res
 dummy.tmp
+file
 file.res
 file.tmp
 file.tmplt
@@ -178,6 +191,7 @@ file1.html
 file2.html
 file3.html
 gmem.out
+googlesearch
 googlesearch.res
 googlesearchservice-client.adb
 googlesearchservice-client.ads
@@ -186,6 +200,7 @@ googlesearchservice-server.ads
 googlesearchservice-types.adb
 googlesearchservice-types.ads
 googlesearchservice.ads
+head
 head.res
 head.tmp
 hello_demo-client.adb
@@ -195,9 +210,12 @@ hello_demo-server.ads
 hello_demo-types.adb
 hello_demo-types.ads
 hello_demo.ads
+hostip
 hostip.res
 hostip.tmp
+huge_response
 huge_response.res
+hval
 hval.res
 hval.tmp
 interoplab-client.adb
@@ -207,38 +225,59 @@ interoplab-server.ads
 interoplab-types.adb
 interoplab-types.ads
 interoplab.ads
+interoplab_main
 interoplab_main.res
+moved
 moved.res
 moved.tmp
+multiple
 multiple.res
+param
 param.res
 param.tmp
+redirect
 redirect.res
 redirect.tmp
 run1
 run2
+sback
 sback.res
+server_config
 server_config.res
+server_info
 server_info.res
+sessions
 sessions.res
+sessions2
 sessions2.res
+sessions3
 sessions3.res
+shutdown
 shutdown.res
 shutdown.tmp
+simple
 simple.res
 simple.tmp
+soap1
 soap1.res
 soap1.tmp
+soap2
 soap2.res
 soap2.tmp
+soap3
 soap3.res
 soap3.tmp
+soap4
 soap4.res
+sock1
 sock1.res
 sock1.tmp
+sp
 sp.res
 sp.tmp
+ssback
 ssback.res
+ssp
 ssp.res
 ssp.tmp
 stock_quote_service-client.adb
@@ -255,41 +294,62 @@ stockquoteservice-server.ads
 stockquoteservice-types.adb
 stockquoteservice-types.ads
 stockquoteservice.ads
+strm
 strm.res
 strm.tmp
+strm2
 strm2.res
 strm2.tmp
+tclientto
 tclientto.res
 tclientto.tmp
+tcom
 tcom.res
+test_sec_soap
 test_sec_soap.res
 test_sec_soap.tmp
+test_soap
 test_soap.res
 test_soap.tmp
+test_soap2
 test_soap2.res
+test_soap3
 test_soap3.res
+test_soap4
 test_soap4.res
+test_soap5
 test_soap5.res
+test_speed
 test_speed.res
 test_speed.tmp
+test_templates_if
 test_templates_if.res
 test_templates_if.tmp
+test_wsdl
 test_wsdl.res
 test_wsdl.tmp
+test_wsdl2
 test_wsdl2.res
 test_wsdl2.tmp
+test_wsdl3
 test_wsdl3.res
 test_wsdl3.tmp
+testxml
 testxml.res
 testxml.tmp
+tgetparam
 tgetparam.res
 tgetparam.tmp
+tlog
 tlog.res
 tlog.tmp
+tmime
 tmime.res
+tres
 tres-1.res
 tres-2.res
 tres.res
+tres2
 tres2.res
 tres2.tmp
 tresres-file1_html.ads
@@ -297,30 +357,42 @@ tresres-file2_html.ads
 tresres-file_tmplt.ads
 tresres.adb
 tresres.ads
+tsgetparam
 tsgetparam.res
 tsgetparam.tmp
+turl
 turl.res
 turl.tmp
+turl2
 turl2.res
 turl2.tmp
+turl3
 turl3.res
 turl3.tmp
+turl4
 turl4.res
 turl4.tmp
+unexph
 unexph.res
 unexph.tmp
+unexph2
 unexph2.res
 unexph2.tmp
+upload
 upload.res
 upload.tmp
+upload2
 upload2.res
 upload2.tmp
+upload3
 upload3.res
 upload3.tmp
+workorder
 workorder.res
 workorder.tmp
 wsdl_1.res
 wsdl_1.wsdl
+wsdl_1_main
 wsdl_1_service-client.adb
 wsdl_1_service-client.ads
 wsdl_1_service-server.adb
@@ -330,6 +402,7 @@ wsdl_1_service-types.ads
 wsdl_1_service.ads
 wsdl_2.res
 wsdl_2.wsdl
+wsdl_2_main
 wsdl_2_service-client.adb
 wsdl_2_service-client.ads
 wsdl_2_service-server.adb
@@ -337,7 +410,13 @@ wsdl_2_service-server.ads
 wsdl_2_service-types.adb
 wsdl_2_service-types.ads
 wsdl_2_service.ads
+wsdl_a.res
+wsdl_a.wsdl
+zapp
 zapp.res
+zbig
 zbig.res
+zfile
 zfile.res
+zstrm
 zstrm.res
