--- a/include/makefile
+++ b/include/makefile
@@ -17,6 +17,7 @@ SOURCES	= table_of_dynamic_keys_and_static_values_g.adb \
 	table_of_strings_and_static_values_g.adb \
 	strings_cutter.adb md5.adb \
 	templates_parser.adb templates_parser-input.adb \
+	templates_parser-query.adb \
 	sha.ads sha-process_data.adb sha-strings.adb \
 	memory_streams.adb zlib-thin.adb zlib.adb
 
