Initialize WSDL2AWS variable.

--- a/regtests/makefile
+++ b/regtests/makefile
@@ -64,6 +64,7 @@ WSDL_TESTS   =
 WSDL_ATESTS  =
 ASIS_TESTS   =
 ASIS2_TESTS  =
+WSDL2AWS     =
 
 ifdef XMLADA
 STD_TESTS   := $(STD_TESTS) $(RT_SOAP)
