(POSIX): New variable.

--- a/makefile.conf
+++ b/makefile.conf
@@ -31,7 +31,13 @@ GNAT_VERSION = 3.15
 # ASIS optional, needed if you want to build ada2wsdl tool. This tool can be
 # used to create a WSDL document from an Ada spec.
 #
-#ASIS	 = /opt/GNATPRO/3.16a1/lib/asis
+#ASIS	 = c:/opt/GNATPRO/3.16a1/lib/asis
+
+##############################################################################
+# POSIX optional, needed if you want to build AWS using the POSIX version of
+# AWS.OS_Lib.
+#
+#POSIX	 = /usr/Ada.Libraries/POSIX
 
 ##############################################################################
 # AWS support SSL (Secure Socket Layer). The SSL support is always built-in
