--- a/regtests/makefile
+++ b/regtests/makefile
@@ -56,7 +56,7 @@ RT_STD = turl tgetparam param dummy simple tclientto shutdown strm strm2 \
 	tlog unexph2 sp sessions dirop multiple tcom tmime sessions2 \
 	sessions3 huge_response server_info server_config sback append \
 	compress zapp zbig zfile zstrm dispatch dispatch_vh dispatch_method \
-	split zstrm2 zstrm3 once get_post $(RT_STD_SEC)
+	split zstrm2 zres once get_post $(RT_STD_SEC)
 
 STD_TESTS    = $(RT_STD)
 OTH_TESTS    = tres
@@ -200,6 +200,19 @@ tres: force
 	./tres 1246 > tres-2.res
 	cat tres-1.res tres-2.res > tres.res
 	-diff -c -w tres.out tres.res >> alldifs
+
+zres: force
+	echo -n Building zres
+	echo "line 1, file 1" > file1.txt
+	echo "line 2, file 1" >> file1.txt
+	echo "line 1, file 2" > file2.txt
+	echo "line 2, file 2" >> file2.txt
+	echo "line 3, file 2" >> file2.txt
+	../tools/awsres -q -r zresres file1.txt -z file2.txt
+	gnatmake -g zres $(GARGS) -largs $(LARGS) -bargs -E
+	echo -n ",  run it"
+	./zres > zres.res
+	-diff -c -w zres.out zres.res >> alldifs
 
 # We change 2 values in aws-containers-tables.ads because its implementation
 # is based on GNAT.Dynamic_Tables which uses a low-level realloc. This
