--- a/src/makefile
+++ b/src/makefile
@@ -36,7 +36,8 @@ SOURCES	= aws-client.adb aws-communication-client.adb \
 	aws-status-translate_table.adb aws-server-status.adb \
 	aws-server-log.adb aws-pop.adb \
 	aws-services-split_pages.adb aws-services-transient_pages.adb \
-	aws-services-transient_pages-control.adb
+	aws-services-transient_pages-control.adb \
+	aws-services-files.adb
 
 ifdef XMLADA
 SOURCES := $(SOURCES) ../xsrc/aws-jabber.adb
